--- a/Dasher/Components/Pages/Details.razor
+++ b/Dasher/Components/Pages/Details.razor
@@ -1,4 +1,6 @@
 ﻿@page "/details"
+@using Microsoft.AspNetCore.Authorization
+<PageTitle>Details</PageTitle>
 <Sidebar></Sidebar>
 
 <div class="main-area">
