--- a/Dasher/Components/_Imports.razor
+++ b/Dasher/Components/_Imports.razor
@@ -8,4 +8,6 @@
 @using Microsoft.JSInterop
 @using Dasher
 @using Dasher.Components
-@using Dasher.Data
+@using DasherAPI.Controllers
+@using DasherAPI.Data
+@using DasherAPI.Endpoints
