--- a/Dasher/Components/App.razor
+++ b/Dasher/Components/App.razor
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="candidates.css" />
     <link rel="stylesheet" href="Dasher.styles.css" />
     <link rel="stylesheet" href="details.css" />
+    <link rel="stylesheet" href="login.css" />
     <link rel="icon" type="image/png" href="favicon.png" />
     <link href="agreements.css" rel="stylesheet" />
     <link href="https://api.fontshare.com/v2/css?f[]=poppins@300,400,700&display=swap" rel="stylesheet">
@@ -26,6 +27,7 @@
     <script src="_framework/blazor.web.js"></script>
     <script src="toggle.js"></script>
     <script src="agreements.js"></script>
+    <script src="localStorageHelper.js"></script>
     <script src="https://kit.fontawesome.com/e349bf4cb6.js" crossorigin="anonymous"></script>
 </body>
 
