--- a/Dasher/Components/Pages/Home.razor
+++ b/Dasher/Components/Pages/Home.razor
@@ -1,13 +1,19 @@
-﻿@* @page "/"
+﻿@page "/"
+@using Microsoft.AspNetCore.Authentication
+@using Microsoft.AspNetCore.Authorization
 @inject IJSRuntime JS
 @inject NavigationManager navman
-@inject WorkersController workerscontroller
+@inject EmployeeController employeecontroller
+@inject EmployerController employercontroller
+@inject UserController usercontroller
 <PageTitle>Home</PageTitle>
 <div style="display:flex">
     <Sidebar></Sidebar>
     <div class="main-area">
         <div class="container">
-            <h1 class="label">The best specialists are here!</h1>
+            <div style="display:flex">
+                <h1 class="label">The best specialists are here!</h1>
+            </div>
             <div class="searchbar">
                 <input class="searchbar__input" type="search" placeholder="Search for contractor" @bind-value="searchquery"/>
                 <button class="searchbar__btn" @onclick="()=> Search(searchquery)">
@@ -29,28 +35,28 @@
                 }
             </div>
             <div class="results">
-                <p class="results__label">Results:&nbsp;  @filteredWorkers.Count</p>
+                <p class="results__label">Results:&nbsp;  @filteredEmployees.Count</p>
             </div>
             <div class="candidates">
-                @foreach(var filteredworker in filteredWorkers)
+                @foreach (var filteredemployee in filteredEmployees)
                 {
                     <div class="card">
                         <div class="card__top">
                             <p class="card__top-hashtag">#Available now</p>
-                            <div class="card__top-price">@filteredworker.HourlyPay PLN/h</div>
+                            <div class="card__top-price">@filteredemployee.HourlyPay PLN/h</div>
                         </div>
                         <div class="card__main">
                             <img class="card__main-img" src="!image1.png" />
                             <div>
-                                <p class="card__main-title">@filteredworker.Name @filteredworker.Lastname</p>
-                                <p class="card__main-subtitle">@filteredworker.JobTitle</p>
-                                <p class="card__main-review"><i class="fa-solid fa-star"></i> @filteredworker.Rating (@filteredworker.CommentsCount)</p>
+                                <p class="card__main-title">@usercontroller.Get(filteredemployee.UserID).Firstname @usercontroller.Get(filteredemployee.UserID).Lastname</p>
+                                <p class="card__main-subtitle">@filteredemployee.JobTitle</p>
+                                <p class="card__main-review"><i class="fa-solid fa-star"></i> @filteredemployee.Rating (@filteredemployee.CommentsCount)</p>
                             </div>
                         </div>
                         <div class="card__line"></div>
                         <div class="card__bio">
                             <p class="card__bio-text">
-                                "@filteredworker.Bio"
+                                "@filteredemployee.Bio"
                             </p>
                         </div>
                         <div class="card__bottom">
@@ -59,7 +65,7 @@
                                     <path stroke-linecap="round" stroke-linejoin="round" d="M21 8.25c0-2.485-2.099-4.5-4.688-4.5-1.935 0-3.597 1.126-4.312 2.733-.715-1.607-2.377-2.733-4.313-2.733C5.1 3.75 3 5.765 3 8.25c0 7.22 9 12 9 12s9-4.78 9-12Z" />
                                 </svg>
                             </button>
-                            <button class="card__bottom-details" @onclick='()=>{navman.NavigateTo("/details");}'>Details</button>
+                            <button class="card__bottom-details" @onclick='()=>ToDetails()'>Details</button>
                         </div>
                     </div>
                 }
@@ -69,8 +75,8 @@
 </div>
 
 @code{
-    private List<Worker> workers;
-    private List<Worker> filteredWorkers;
+    private List<Employee> employees;
+    private List<Employee> filteredEmployees;
     private bool showOnlyAvailable = false;
     private List<string> selectedProfessions = new List<string>();
     private List<string> professions = new List<string> { "Delivery", "Cleaning", "Waitress", "Waiter", "Plumber", "Hostess", "Manager" };
@@ -78,44 +84,48 @@
     private List<string> search_words = new List<string>();
     protected override void OnInitialized()
     {
-        workers = workerscontroller.Get();
-        filteredWorkers = new List<Worker>(workers);
+        employees = employeecontroller.Get();
+        filteredEmployees = new List<Employee>(employees);
     }
     private void ToggleAvailability()
     {
-        // showOnlyAvailable = !showOnlyAvailable;
-        // FilterWorkers();
+        showOnlyAvailable = !showOnlyAvailable;
+        FilterWorkers();
     }
 
     private void FilterByProfession(string profession)
     {
-        // if (selectedProfessions.Contains(profession))
-        // {
-        //     selectedProfessions.Remove(profession);
-        // }
-        // else
-        // {
-        //     selectedProfessions.Add(profession);
-        // }
-        // FilterWorkers();
+        if (selectedProfessions.Contains(profession))
+        {
+            selectedProfessions.Remove(profession);
+        }
+        else
+        {
+            selectedProfessions.Add(profession);
+        }
+        FilterWorkers();
     }
     private void Search(string str)
     {
-        // search_words = str.Split(" ").ToList();
-        // FilterWorkers();
+        search_words = str.Split(" ").ToList();
+        FilterWorkers();
     }
     private void FilterWorkers()
     {
-        // filteredWorkers.Clear();
-        // foreach (var worker in workers)
-        // {
-        //     if ((selectedProfessions.Count==0 || selectedProfessions.Contains(worker.JobTitle)) &&
-        //     (showOnlyAvailable==false || showOnlyAvailable == worker.IsAvailableNow) &&
-        //     (string.IsNullOrEmpty(searchquery) || worker.Name.Contains(searchquery, StringComparison.OrdinalIgnoreCase) || worker.Lastname.Contains(searchquery, StringComparison.OrdinalIgnoreCase)))
-        //     {
-        //         filteredWorkers.Add(worker);
-        //     }
-        // }
+        filteredEmployees.Clear();
+        foreach (var employee in employees)
+        {
+            if ((selectedProfessions.Count==0 || selectedProfessions.Contains(employee.JobTitle)) &&
+            (showOnlyAvailable==false || showOnlyAvailable == employee.IsAvailableNow) &&
+            (string.IsNullOrEmpty(searchquery) || usercontroller.Get(employee.UserID).Firstname.Contains(searchquery, StringComparison.OrdinalIgnoreCase) || usercontroller.Get(employee.UserID).Lastname.Contains(searchquery, StringComparison.OrdinalIgnoreCase)))
+            {
+                filteredEmployees.Add(employee);
+            }
+        }
+    }
+    private void ToDetails()
+    {
+        navman.NavigateTo("/details");
     }
     protected override async Task OnAfterRenderAsync(bool firstRender)
     {
@@ -127,4 +137,4 @@
             await JS.InvokeVoidAsync("seeDetails");
         }
     }
-} *@
+}
