division on employee web app and employer one

--- a/Dasher/Components/Pages/Employer/Home.razor
+++ b/Dasher/Components/Pages/Employer/Home.razor
@@ -138,7 +138,7 @@
         {
             navman.NavigateTo("/saved"); // Custom unauthorized route
         }
-        else if (user.IsInRole("Employee"))
+        else if (user.IsInRole("Employer"))
         {
 
         }
