chat for app part 1

--- a/Dasher/Components/Pages/Employer/Details.razor
+++ b/Dasher/Components/Pages/Employer/Details.razor
@@ -1,4 +1,4 @@
-﻿@page "/details"
+﻿@page "/employer/details/id"
 @using Microsoft.AspNetCore.Authorization
 <PageTitle>Details</PageTitle>
 <Sidebar></Sidebar>
