--- a/Dasher/Components/Pages/Employer/Agreements.razor
+++ b/Dasher/Components/Pages/Employer/Agreements.razor
@@ -1,4 +1,4 @@
-﻿@page "/agreements"
+﻿@page "/employer/agreements"
 @using System.Globalization
 @inject IJSRuntime JS
 @inject UserController usercontroller
