--- a/Dasher/Components/Pages/Employer/Market.razor
+++ b/Dasher/Components/Pages/Employer/Market.razor
@@ -1,4 +1,4 @@
-﻿@page "/"
+﻿@page "/employer"
 @using Microsoft.AspNetCore.Authentication
 @using Microsoft.AspNetCore.Authorization
 @inject IJSRuntime JS
