--- a/Dasher/wwwroot/messages.css
+++ b/Dasher/wwwroot/messages.css
@@ -77,26 +77,88 @@
     border: 2px solid var(--clr-purple-light);
     border-radius: 2rem;
 }
-.chat-box__title{
-    font-size:var(--size-2xl);
-    padding-top:1rem;
-    padding-left:2rem;
+.chat-box__area {
+    width: 100%;
+    height: 77%;
+    overflow-y: auto;
+    padding: 2rem;
 }
-.message {
-    padding:1rem;
-    border-radius: 1rem;
+.chat-box__area::-webkit-scrollbar {
+    width: 8px; /* Width of the scrollbar */
+}
+
+    .chat-box__area::-webkit-scrollbar-track {
+        background: black; /* Track background color */
+        border-radius: 10px; /* Optional rounded corners */
+    }
+
+    .chat-box__area::-webkit-scrollbar-thumb {
+        background-color: black; /* Scrollbar thumb color */
+        border-radius: 10px; /* Rounded scrollbar thumb */
+        border: 2px solid #f1f1f1; /* Optional border */
+    }
+
+    /* Scrollbar thumb on hover */
+        .chat-box__area::-webkit-scrollbar-thumb:hover {
+            background-color: #555; /* Darker color on hover */
+        }
+.chat-box__title {
+    font-size: var(--size-2xl);
+    padding-top: 1rem;
+    padding-left: 2rem;
+}
+.message-tab__other {
+    margin-right:auto;
+    margin-top: 1rem;
+    background-color: var(--clr-gray-light);
+    display: flex;
+    width: fit-content;
+    height: fit-content;
     max-width: 70%;
+    justify-content: center;
+    padding: 0.5rem;
+    align-items: center;
+    border: 2px solid var(--clr-gray-light);
+    border-top-left-radius: 1rem;
+    border-top-right-radius: 1rem;
+    border-bottom-right-radius:1rem;
+    color: black;
 }
-
-.user-message {
-    background-color: var(--clr-purple-light);
-    color:black;
-    text-align: left;
+.message-tab__user {
+    margin-left: auto;
+    margin-top: 1rem;
+    display: flex;
+    width: fit-content;
+    height: fit-content;
+    max-width: 70%;
+    justify-content: center;
+    padding: 0.5rem;
+    align-items: center;
+    border: 2px solid var(--clr-purple-light);
+    border-top-left-radius: 1rem;
+    border-top-right-radius: 1rem;
+    border-bottom-left-radius: 1rem;
 }
-
-.other-message {
-    background-color: black;
-    border:1px solid var(--clr-puple-light);
-    color:white;
-    text-align: right;
+.message-tab-text {
+    font-size: var(--size-base);
+    max-width:100%;
+    word-wrap: break-word; /* Wraps long words onto the next line */
+    overflow-wrap: break-word;
+}
+.textarea-input{
+    padding-left:1.5rem;
+}
+.message__textarea {
+    overflow: hidden;
+    font-size: var(--size-base);
+    width: 100%;
+    height: 70px;
+    background-color: var(--clr-dark);
+    border-radius: 0.5rem;
+    resize: none;
+    color: var(--clr-white);
+    padding-top: 0.4rem;
+    padding-left: 0.4rem;
+    padding-bottom: 0.4rem;
+    padding-right: 0.4rem;
 }
